tree-sitter-syslang/test/corpus/code.txt
==================
Inline code
==================
`inline code`
`:`
---
(document (text_line
  (inline_code
    (inline_code_start)
    (inline_code_content)
    (inline_code_end)
  )
  (inline_code
    (inline_code_start)
    (inline_code_content)
    (inline_code_end)
  )
))

==================
Code blocks
==================
@code
  content
  here
@end

test

@code
  content
@end

@code
  content
@end

@code
  content
@end

@code js
  content
@end

@code
  content
@end
---
(document
    (code_block
      (code_block_start)
      (code_block_content (text) (text))
      (code_block_end))
    (text_line (text))
    (code_block
      (code_block_start)
      (code_block_content (text))
      (code_block_end))
    (code_block
      (code_block_start)
      (code_block_content (text))
      (code_block_end))
    (code_block
      (code_block_start)
      (code_block_content (text))
      (code_block_end))
    (code_block
      (code_block_start
        (code_block_language))
      (code_block_content (text))
      (code_block_end))
    (code_block
      (code_block_start)
      (code_block_content (text))
      (code_block_end)))

==================
Code blocks inside list items
==================
- List item
  @code
    content
    here
  @end
---
(document
  (list_item
    (list_item_marker)
    (text_line (text))
    (code_block
      (code_block_start)
      (code_block_content
        (text)
        (text))
      (code_block_end)
    )
  )
)
