tree-sitter-syslang/test/corpus/label.txt
==================
Label
==================
label: text

also label:
  - label: text
  - also-label:

also-label:
also-label: here

---
(document
  (text_line (label) (text))
  (label_line)
  (list_item (list_item_marker) (text_line (label) (text)))
  (list_item (list_item_marker) (text_line (label)))
  (label_line)
  (text_line (label) (text))
)

==================
Label with list item children
==================
Parent:
  - Item
  - Item
---
(document
  (label_line)
  (list_item (list_item_marker) (text_line (text)))
  (list_item (list_item_marker) (text_line (text)))
)

==================
Label line inside task
==================
[ ] task
  label line:
    - child
---
(document
  (task_default (task_marker_default) (text_line (text))
    (label_line)
    (list_item (list_item_marker) (text_line (text)))
  )
)
