tree-sitter-syslang/test/corpus/list.txt
==================
List items
==================
- List item
* Heading
  - List item
    Subtext
  - List item
  - Labeled - list item
  - Super labeled - list item
  - Labeled - list item - https://url.com
  - [[test]] - List item - https://url.com

---
(document
  (list_item (list_item_marker) (text_line (text)))
  (heading_1
    (heading_1_marker) (text_to_eol)
    (list_item (list_item_marker)
      (text_line (text))
      (text_line (text))
    )
    (list_item (list_item_marker) (text_line (text)))
    (list_item
      (list_item_marker)
      (list_item_label (text))
      (list_item_label_marker)
      (text)
    )
    (list_item
      (list_item_marker)
      (list_item_label (text))
      (list_item_label_marker)
      (text)
    )
    (list_item
      (list_item_marker)
      (list_item_label (text))
      (list_item_label_marker)
      (text)
      (list_item_label_marker)
      (external_link)
    )
    (list_item
      (list_item_marker)
      (text_line
        (internal_link (internal_link_start) (internal_link_target) (internal_link_end))
        (text)
        (external_link)
      )
    )
  )
)
