tree-sitter-syslang/test/corpus/section.txt
==================
Section
==================
> section 1
  inside section 1
  > section 2
    inside section 2
  inside section 1
  > section 3
  inside section 1
outside
---
(document
  (section (section_marker) (text_to_eol)
    (text_line (text) (number))
    (section (section_marker) (text_to_eol)
      (text_line (text) (number)))
    (text_line (text) (number))
    (section (section_marker) (text_to_eol))
    (text_line (text) (number)))
  (text_line (text))
)

==================
Sections inside tasks and tasks inside sections
==================
> section
  [ ] task
    > section
      [ ] task
    [ ] task
  [ ] task
---
(document
  (section (section_marker) (text_to_eol)
    (task_default (task_marker_default) (text_line (text))
      (section (section_marker) (text_to_eol)
        (task_default (task_marker_default) (text_line (text))))
      (task_default (task_marker_default) (text_line (text))))
    (task_default (task_marker_default) (text_line (text)))
  )
)
