tree-sitter-syslang/test/corpus/tags.txt
==================
Tags
==================
+positive -negative @context #hash !danger $identifier
+p -n @c #h !d $i
+123 -123 @123 #123 !123 $123
---
(document
  (text_line
    (tag_positive)
    (tag_negative)
    (tag_context)
    (tag_hash)
    (tag_danger)
    (tag_identifier)
  )
  (text_line
    (tag_positive)
    (tag_negative)
    (tag_context)
    (tag_hash)
    (tag_danger)
    (tag_identifier)
  )
  (text_line
    (tag_positive)
    (number)
    (tag_context)
    (tag_hash)
    (tag_danger)
    (tag_identifier)
  )
)

==================
TODO: Tags with word boundary separation
==================
# -a-tag
# 123-not-a-tag
# ---
# (document
#   (text_line (tag_negative))
#   (text_line (number))
# )
