tree-sitter-syslang/test/corpus/types.txt
==================
String
==================
"String", "string" and "string".
---
(document
  (text_line
    (string)
    (text)
    (string)
    (text)
    (string)
    (text)
  )
)

==================
Number
==================
0 1, 2, -3, 4/s, time2market, 12.3, 6.
---
(document
  (text_line
    (number)
    (number)
    (number)
    (number)
    (number)
    (text)
    (number)
    (number)
  )
)

==================
Ticket
==================
APP-123
---
(document 
  (text_line (ticket)))
